syntax = "proto3";
package nova.gal.v1;

import "nova/gal/v1/params.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Carina-labs/nova/x/gal/types";

// GenesisState defines the gal module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated DepositAccount depositAccounts = 2;
  repeated WithdrawInfo withdrawInfo = 3;
}

// DepositAccount defines snToken's total share and deposit information.
message DepositAccount {
  string denom = 1;
  repeated DepositInfo depositInfos = 2;
  int64 totalShare = 3;
  int64 lastBlockUpdate = 4;
}

// DepositInfo defines user address, share and debt.
message DepositInfo {
  string address = 1;
  int64 share = 2;
  int64 debt = 3;
}

message WithdrawInfo {
  string address = 1;
  string denom = 2;
  int64 amount = 3;
  google.protobuf.Timestamp completion_time = 4[(gogoproto.nullable) = false, (gogoproto.stdtime)= true];
}